--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -13,7 +13,7 @@
 
     <!-- Add gallery items to this list -->
     <div class="gallery"></div>
-
+    <!-- <script src="simple-lightbox.js" type="module"></script> -->
     <script src="js/01-gallery.js" type="module"></script>
   </body>
 </html>
